Change to use zip compression for transcript file; github had a file size limit so it was compressed for upload

--- a/Starbucks_Capstone_notebook.ipynb
+++ b/Starbucks_Capstone_notebook.ipynb
@@ -103,7 +103,7 @@
     "# read in the json files\n",
     "portfolio = pd.read_json('data/portfolio.json', orient='records', lines=True)\n",
     "profile = pd.read_json('data/profile.json', orient='records', lines=True)\n",
-    "transcript = pd.read_json('data/transcript.json', orient='records', lines=True)"
+    "transcript = pd.read_json('data/transcript.zip', orient='records', lines=True, compression='zip')"
    ]
   },
   {
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
        "4  {'offer id': '4d5c57ea9a6940dd891ad53e9dbe8da0'}  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
        "4  4d5c57ea9a6940dd891ad53e9dbe8da0     NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
